--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,14 @@ pool:
   vmImage: 'my_agent2'
 
 steps:
+- script: |
+    curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list
+    apt update && apt install terraform -y
+    terraform version
+  displayName: 'Install Terraform'
+
+steps:
 - task: TerraformInstaller@1
   inputs:
     terraformVersion: '1.5.7'
