--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,15 +2,7 @@ trigger:
 - main
 
 pool:
-  vmImage: 'my_agent2'
-
-steps:
-- script: |
-    curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list
-    apt update && apt install terraform -y
-    terraform version
-  displayName: 'Install Terraform'
+  vmImage: 'UAT-Pipeline-Agents'
 
 steps:
 - task: TerraformInstaller@1
