--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,36 +1,36 @@
 trigger:
 - main
 
-pool:
-  vmImage: 'UAT-Pipeline-Agents'
+pool: 'UAT-Pipeline-Agents'
 
 steps:
 - task: TerraformInstaller@1
+  displayName: 'install terraform'
   inputs:
-    terraformVersion: '1.5.7'
+    terraformVersion: 'latest'
 
-- task: TerraformTaskV5@5
-  displayName: 'Terraform Init'
+- task: TerraformTask@5
+  displayName: 'terraform init'
   inputs:
     provider: 'azurerm'
     command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/3rd-Aug-PPL'
     backendServiceArm: 'nits-federated-app'
-    backendAzureRmResourceGroupName: 'nits1'
     backendAzureRmStorageAccountName: 'nitsstg1'
     backendAzureRmContainerName: 'niteshcontainer'
     backendAzureRmKey: 'remote.tfstate'
 
-- task: TerraformTaskV5@5
-  displayName: 'Terraform Plan'
+- task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'plan'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/3rd-Aug-PPL'
     environmentServiceNameAzureRM: 'nits-federated-app'
 
-- task: TerraformTaskV5@5
-  displayName: 'Terraform Apply'
+- task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/3rd-Aug-PPL'
+    commandOptions: '--auto-approve'
     environmentServiceNameAzureRM: 'nits-federated-app'
-    allowTelemetryCollection: false
