--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,7 +14,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: '3rd-Aug-PPL'
+    workingDirectory: 'D:\git_revision\3rd-Aug-PPL'
     backendServiceArm: 'nits-federated-app'
     backendAzureRmStorageAccountName: 'nitsstg1'
     backendAzureRmContainerName: 'niteshcontainer'
@@ -24,13 +24,13 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'plan'
-    workingDirectory: '3rd-Aug-PPL'
+    workingDirectory: 'D:\git_revision\3rd-Aug-PPL'
     environmentServiceNameAzureRM: 'nits-federated-app'
 
 - task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'apply'
-    workingDirectory: '3rd-Aug-PPL'
+    workingDirectory: 'D:\git_revision\3rd-Aug-PPL'
     commandOptions: '--auto-approve'
     environmentServiceNameAzureRM: 'nits-federated-app'
