--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,40 +1,62 @@
 trigger:
 - main
 
-pool: 'UAT-Pipeline-Agents'
+pool:
+  name: 'UAT-Pipeline-Agents'
+
+parameters:
+- name: runInit
+  type: boolean
+  default: true
+
+- name: runPlan
+  type: boolean
+  default: true
+
+- name: runApply
+  type: boolean
+  default: true
 
 variables:
-  nitesh_path: 'D:\git_revision\3rd-Aug-PPL'
+  nitesh_path: 'D:\\git_revision\\3rd-Aug-PPL'
   service_connection: 'nits-federated-app'
-
 
 steps:
 - task: TerraformInstaller@1
-  displayName: 'install terraform'
+  displayName: 'Install Terraform'
   inputs:
     terraformVersion: 'latest'
 
-- task: TerraformTask@5
-  displayName: 'terraform init'
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
-    workingDirectory: $(nitesh_path)
-    backendServiceArm: $(service_connection)
-    backendAzureRmStorageAccountName: 'nitsstg1'
-    backendAzureRmContainerName: 'niteshcontainer'
-    backendAzureRmKey: 'remote.tfstate'
+# Run terraform init only if runInit == true
+- ${{ if eq(parameters.runInit, true) }}:
+  - task: TerraformTask@5
+    displayName: 'Terraform Init'
+    inputs:
+      provider: 'azurerm'
+      command: 'init'
+      workingDirectory: $(nitesh_path)
+      backendServiceArm: $(service_connection)
+      backendAzureRmStorageAccountName: 'nitsstg1'
+      backendAzureRmContainerName: 'niteshcontainer'
+      backendAzureRmKey: 'remote.tfstate'
 
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: $(nitesh_path)
-    environmentServiceNameAzureRM: $(service_connection)
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'apply'
-    workingDirectory: $(nitesh_path)
-    environmentServiceNameAzureRM: $(service_connection)
+# Run terraform plan only if runPlan == true
+- ${{ if eq(parameters.runPlan, true) }}:
+  - task: TerraformTask@5
+    displayName: 'Terraform Plan'
+    inputs:
+      provider: 'azurerm'
+      command: 'plan'
+      workingDirectory: $(nitesh_path)
+      environmentServiceNameAzureRM: $(service_connection)
+
+# Run terraform apply only if runApply == true
+- ${{ if eq(parameters.runApply, true) }}:
+  - task: TerraformTask@5
+    displayName: 'Terraform Apply'
+    inputs:
+      provider: 'azurerm'
+      command: 'apply'
+      workingDirectory: $(nitesh_path)
+      environmentServiceNameAzureRM: $(service_connection)
 
