--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,26 +24,25 @@ stages:
       displayName: 'Install Terraform'
       inputs:
         terraformVersion: 'latest'
-
-    - task: TerraformTaskV5@5
-      displayName: 'Terraform Init'
+    
+    - task: TerraformTask@5
       inputs:
         provider: 'azurerm'
         command: 'init'
-        workingDirectory: '$(nitesh_path)'
-        backendServiceArm: '$(service_connection)'
+        workingDirectory: 'D:\\git_revision\\3rd-Aug-PPL'
+        backendServiceArm: 'nits-federated-app1'
         backendAzureRmStorageAccountName: 'nitsstg2'
         backendAzureRmContainerName: 'niteshcontainer1'
-        backendAzureRmKey: 'rom.tfstate'
+        backendAzureRmKey: 'dd.tfstate'
 
-    - task: TerraformTaskV5@5
+    - task: TerraformTask@5
       displayName: 'Terraform Validate'
       inputs:
         provider: 'azurerm'
         command: 'validate'
         workingDirectory: '$(nitesh_path)'
 
-    - task: TerraformTaskV5@5
+    - task: TerraformTask@5
       displayName: 'Terraform Plan'
       inputs:
         provider: 'azurerm'
@@ -77,7 +76,7 @@ stages:
     displayName: "Terraform Apply"
     pool: 'UAT-Pipeline-Agents'
     steps:
-    - task: TerraformTaskV5@5
+    - task: TerraformTask@5
       displayName: 'Terraform Apply'
       inputs:
         provider: 'azurerm'
